# puchifile

./: .gitignore  README.md  file_thumbnail.ui  file_thumbnail.vala  file_thumbnail_item.ui  file_thumbnail_item.vala  flake.nix  io.jchw.Puchifile.yml  location_bar.ui  location_bar.vala  main.vala  meson.build  puchifile.gresource.xml  style.css  window.ui  window.vala
